Fix column spacing.
git-svn-id: https://www.kiberpipa.org/svn/intranet/rd666@1438 ddb1d346-470b-0410-b242-bdb7c8b48ed5

--- a/media/www/css/style.css
+++ b/media/www/css/style.css
@@ -323,8 +323,7 @@ a img {
 	font-size: 20px;
 	font-weight: normal;
 	text-decoration: underline;
-	padding-top: 0px;
-	padding-bottom: 5px;
+	padding: 0 5px 5px 0;
 	}
 	
 .blog-cp-publish {
